--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>PortfolioAkb</title>
+  <title>Ali Kağan Bertizlioğlu - Portfolio</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <style>
+    body {
+      background-color: #1a1a1a;
+      color: #ffffff;
+    }
+  </style>
 </head>
 <body>
   <app-root></app-root>
